--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     padding: 15px;
     margin: 0;
     min-width: 400px;
+    height: 150px;
 }
 #input-el{
     padding: 10px;
@@ -23,6 +24,7 @@ body{
     color: white;
     font-size: 0.85rem;
     cursor: pointer;
+
 }
 #save-tab-btn{
     padding: 10px 25px;
@@ -54,6 +56,15 @@ body{
     display: flex;
     justify-content: space-between;
 
+}
+label{
+    font-weight: bold;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    color: lightseagreen;
+
+}
+input::placeholder{
+    color: rgb(181, 180, 180);
 }
 ul{
     margin: 10px 0 ;
