--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     margin: 0;
     min-width: 400px;
     height: 150px;
+    position: relative;
+
 }
 #input-el{
     padding: 10px;
@@ -67,17 +69,65 @@ input::placeholder{
     color: rgb(181, 180, 180);
 }
 ul{
+
+    width: 300px;
     margin: 10px 0 ;
     padding: 0;
 }
 li{
-    margin: 5px 0;
-    list-style: none;
+    width: 300px;
+    border-bottom: 1px solid #3333335c;
+    margin: 20px 10px;
+    /* list-style: none; */
+    list-style: decimal;
+    overflow-wrap:anywhere;
 }
 a{
 
     /* text-decoration: none; */
-    color: lightseagreen;
+    color: rgb(20, 205, 156);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1rem;
+    text-decoration: none;
+
+}
+
+#confirmDelete{
+    width: 250PX;
+    height: 80PX;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5PX;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8PX;
+    border: 1px solid black;
+    position: absolute;
+    top: 90%;
+    left: 20%;
+    display: none;
+}
+#confirmDelete p{
+    font-size: 1.1rem;
+    margin: 0;
+}
+#confirmDelete #yes-btn{
+    padding: 4px 20px;
+    font-size: 1.1rem;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    margin-right: 10px;
+
+    background-color: rgb(18, 154, 18);
+}
+#confirmDelete #no-btn{
+    padding: 4px 20px;
+    font-size: 1.1rem;
+    border-radius: 5px;
+    border: none;
+    color: white;
+
+    background-color: rgb(179, 45, 21);
 }
