--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ a{
 }
 
 #confirmDelete{
-    width: 250PX;
+    width: 300PX;
     height: 80PX;
     background-color: rgb(255, 255, 255);
     border-radius: 5PX;
@@ -105,6 +105,7 @@ a{
     border: 1px solid black;
     position: absolute;
     top: 90%;
+    padding: 10px;
     left: 20%;
     display: none;
 }
